@@ -12,6 +12,7 @@ ver. 0.7.4 (2006/09/28) - beta
 - Improved configuration files. Thanks to Yaroslav Halchenko
 - Added man page for "fail2ban-regex"
 - Moved ban/unban messages from "info" level to "warn"
+- Added "-s" option to specify the socket path
 
 ver. 0.7.3 (2006/09/28) - beta
 ----------
